# 3-tier-monolythic

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  DOCUMENT.txt  README.md  Resource Management Dashboard.md  deploy-backend.sh  deploy-frontend.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
attached_assets/: Pasted--venv-ritesh-backed-cat-create-azure-schema-py-EOF-usr-bin-env-python3-Copy-the--1764328912025_1764328912026.txt  Pasted--venv-ritesh-backed-python-run-py-INFO-Will-watch-for-changes-in-these-directories-hom-1764328560586_1764328560587.txt  Pasted--venv-ritesh-backed-uvicorn-app-main-app-host-0-0-0-0-port-8000-Database-credentials-no-1764321750651_1764321750652.txt  Pasted--venv-ritesh-backed-uvicorn-app-main-app-host-0-0-0-0-port-8000-Loading-env-from-home--1764325055399_1764325055400.txt  Pasted--venv-ritesh-backed-uvicorn-app-main-app-host-0-0-0-0-port-8000-Loading-env-from-home--1764325821019_1764325821026.txt  Pasted--venv-ritesh-backed-uvicorn-app-main-app-host-0-0-0-0-port-8000-Loading-env-from-home--1764328773923_1764328773923.txt  Pasted--venv-ritesh-backed-uvicorn-app-main-app-host-0-0-0-0-port-8000-Loading-env-from-home--1764329458532_1764329458533.txt  Pasted--venv-ritesh-backend-python-run-py-INFO-Will-watch-for-changes-in-these-directories-ho-1764350795883_1764350795884.txt  Pasted-ritesh-backed-ls-Environment-Configuration-Guide-md-README-v1-md-azure-sql-schema-sql-r-1764323610907_1764323610908.txt  Pasted-ritesh-backed-ps-aux-grep-python-root-1076-0-0-0-2-32424-20700-Ss-04-00--1764305107061_1764305107068.txt
(+45 files in other folders)
